Migrated from Java 8 to Java 21
Took 6 minutes