@@ -14,7 +14,6 @@ import xyz.lychee.lagfixer.utils.MessageUtils;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 public class ClearCommand extends CommandManager.Subcommand {
     public ClearCommand(CommandManager commandManager) {
@@ -43,9 +42,10 @@ public class ClearCommand extends CommandManager.Subcommand {
         AtomicInteger ai = new AtomicInteger();
 
         String type = args[0].toLowerCase();
-        switch (type) {
-            case "items":
-                module.getAllowedWorldsStream()
+        return switch (type) {
+            case "items" -> {
+                module.getAllowedWorlds()
+                        .stream()
                         .flatMap(w -> w.getEntitiesByClass(Item.class).stream())
                         .filter(module::clearItem)
                         .forEach(ent -> {
@@ -53,9 +53,11 @@ public class ClearCommand extends CommandManager.Subcommand {
                             ai.incrementAndGet();
                         });
 
-                return MessageUtils.sendMessage(true, sender, "&7Successfully removed &e" + ai.get() + " &7items.");
-            case "creatures":
-                module.getAllowedWorldsStream()
+                yield MessageUtils.sendMessage(true, sender, "&7Successfully removed &e" + ai.get() + " &7items.");
+            }
+            case "creatures" -> {
+                module.getAllowedWorlds()
+                        .stream()
                         .flatMap(w -> w.getEntitiesByClass(Mob.class).stream())
                         .filter(module::clearCreature)
                         .forEach(ent -> {
@@ -63,9 +65,11 @@ public class ClearCommand extends CommandManager.Subcommand {
                             ai.incrementAndGet();
                         });
 
-                return MessageUtils.sendMessage(true, sender, "&7Successfully removed &e" + ai.get() + " &7creatures.");
-            case "projectiles":
-                module.getAllowedWorldsStream()
+                yield MessageUtils.sendMessage(true, sender, "&7Successfully removed &e" + ai.get() + " &7creatures.");
+            }
+            case "projectiles" -> {
+                module.getAllowedWorlds()
+                        .stream()
                         .flatMap(w -> w.getEntitiesByClass(Projectile.class).stream())
                         .filter(module::clearProjectile)
                         .forEach(ent -> {
@@ -73,16 +77,16 @@ public class ClearCommand extends CommandManager.Subcommand {
                             ai.incrementAndGet();
                         });
 
-                return MessageUtils.sendMessage(true, sender, "&7Successfully removed &e" + ai.get() + " &7projectiles.");
-            default:
-                return MessageUtils.sendMessage(true, sender, "&7Invalid clear type: &f" + type);
-        }
+                yield MessageUtils.sendMessage(true, sender, "&7Successfully removed &e" + ai.get() + " &7projectiles.");
+            }
+            default -> MessageUtils.sendMessage(true, sender, "&7Invalid clear type: &f" + type);
+        };
     }
 
     @Override
     public List<String> tabComplete(@NotNull CommandSender sender, @NotNull String[] args) {
         if (args.length == 1) {
-            return Streams.of("items", "creatures", "projectiles").filter(str -> str.startsWith(args[0])).collect(Collectors.toList());
+            return Streams.of("items", "creatures", "projectiles").filter(str -> str.startsWith(args[0])).toList();
         }
         return Collections.emptyList();
     }
